# PhDThesis

./: LICENSE
Analysis/Fieldwork/: Fieldwork.R
Analysis/ROUK/: Existing Formulas.R  Model_Comparison.R  Modelling.R  ROUKModels.R
Analysis/Scotland/: Existing Formulas.R  Model Comparison.R  Modelling.R
Preprocessing/ROUK/: README.md  configHikr.yaml  configOSM.yaml  environment.yaml  execute_Hikr.sh  execute_OSM.sh  setup.cfg  stagein.sh  submit_Hikr.sh  submit_OSM.sh
Preprocessing/ROUK/scripts/: create_filelists_CSV  create_filelists_GPX  get_terrain_details  import_tracks  merge_tracks  prepare_data.R  rerun_breaks  runR  scrape
Preprocessing/ROUK/src/gps_reader_pkg/: break_finder.py  config.py  datatype_definition.py  download_hikr.py  file_reader.py  folder_methods.py  geom_tools.py  get_terrain_details.py  gpx_feature_builder.py  qgis_app_init.py  scraper_module.py  terrain_classifier.py  vector_file_writer.py
Preprocessing/ROUK/src/gpx_importer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Preprocessing/Scotland/: LICENSE  README.md  config.yaml  setup.cfg
Preprocessing/Scotland/scripts/: find_breaks  get_terrain  merge_tracks  os_grid_reduce  prepare_data.R  run_gpx_importer  scrape
Preprocessing/Scotland/src/gps_reader_pkg/: break_finder.py  config.py  convert_csv.py  datatype_definition.py  file_reader.py  geom_tools.py  gpx_feature_builder.py  terrain_classifier.py  vector_file_writer.py
Remapping/: OSMToNationalGrid.py
