[metadata]
name = gpx_importer
version = 1.0.0
license = MIT
license_files = LICENSE
url = https://github.com/AndrewWood94/GPX_Eddie
author = Andrew Woood
author_email = andrew.wood@ed.ac.uk
keywords = ""
description = ""
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True

packages = find:
package_dir =
    =src
scripts =
    scripts/scrape
    scripts/import_tracks
    scripts/merge_tracks
    scripts/create_filelists_GPX
    scripts/create_filelists_CSV
    scripts/runR
    scripts/get_terrain_details
[options.packages.find]
where = src
