[metadata]
name = gpx_importer
version = 1.0.0
license = MIT
license_files = LICENSE
url = https://github.com/AndrewWood94/GPX-Importer
author = Andrew Woood
author_email = andrew.wood@ed.ac.uk
keywords = ""
description = ""
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True

packages = find:
package_dir =
    =src
scripts =
    scripts/scrape
    scripts/find_breaks
    scripts/get_terrain
    scripts/merge_tracks
    scripts/os_grid_reduce
    scripts/run_gpx_importer
    scripts/prepare_data.R
[options.packages.find]
where = src
